src/objects/Product_Key__c.object
<CustomObject>
    <fields>
        <fullName>Blacklist_Reason__c</fullName>
        <label>Blacklist Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Blacklisted_By__c</fullName>
        <label>Blacklisted By</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bypass_CPU_Checking__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bypass CPU Checking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CATS_ID__c</fullName>
        <formula>TEXT(Product_Key_Request__r.Cats_Id__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CATS ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloudBI__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cloud BI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DSI_Name__c</fullName>
        <formula>DSI__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DSI Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSI_Payload__c</fullName>
        <description>What in the DSI is used to generate this key</description>
        <label>DSI Payload</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DSI__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DSI</label>
        <referenceTo>DSI__c</referenceTo>
        <relationshipLabel>Product Keys</relationshipLabel>
        <relationshipName>Product_Keys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Delivery_Date__c</fullName>
        <label>Delivery Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Disable_Registration__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Registration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IsBlackListed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsBlackListed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KeyGroupIndex__c</fullName>
        <label>Key Group Index</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key_Group_Desc__c</fullName>
        <label>Key Group Desc</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key_Group__c</fullName>
        <label>Key Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Production</fullName>
                </value>
                <value>
                    <fullName>Development</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Key__c</fullName>
        <label>Key</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Notification_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>493047 - License Keys - Automated Expiration Notifications</description>
        <inlineHelpText>Indicates whether Expiration Notification has been sent already.
Check to prevent the email from being sent.</inlineHelpText>
        <label>Notification Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>POC_Key__c</fullName>
        <defaultValue>false</defaultValue>
        <label>POC Key</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PreRelease__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PreRelease</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Key_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Key Request</label>
        <referenceTo>Product_Key_Request__c</referenceTo>
        <relationshipLabel>Product Keys</relationshipLabel>
        <relationshipName>Product_Keys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quote_ID__c</fullName>
        <label>Quote ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ship_Account_Name__c</fullName>
        <label>Ship Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_Contact_Name__c</fullName>
        <label>Ship Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ship Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Product Keys</relationshipLabel>
        <relationshipName>Product_Keys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Product Key</fullName>
                </value>
                <value>
                    <fullName>ESRI Key</fullName>
                </value>
                <value>
                    <fullName>Mapbox Key</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <label>Version</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Version</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>isAWS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AWS Key</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isUniversal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Universal</label>
        <type>Checkbox</type>
    </fields>
    <label>Product Key</label>
    <nameField>
        <displayFormat>K-{0000}</displayFormat>
        <label>Product Key Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Keys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>